# cobrust-studio

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  design-partner.md
.github/workflows/: ci.yml  release.yml
crates/studio-router/: Cargo.toml
crates/studio-router/src/: anthropic.rs  cache.rs  config.rs  ledger.rs  lib.rs  openai.rs  provider.rs  router.rs
crates/studio-router/tests/: cache_path_studio.rs  ledger_generic_tag.rs  strip_invariants.rs
crates/studio-server/: Cargo.toml
crates/studio-server/src/: agent_loop.rs  app.rs  cli.rs  embed.rs  error.rs  lib.rs  main.rs  persist.rs  router_init.rs  secret.rs  sse.rs  state.rs  synthetic.rs
crates/studio-server/src/routes/: adr.rs  agent_turn.rs  auth.rs  dispatch.rs  events.rs  finding.rs  health.rs  ledger.rs  login.rs  mod.rs  models.rs  project.rs  version.rs
crates/studio-server/tests/: adr_routes.rs  app_state_smoke.rs  auth_route.rs  dispatch_real_llm_e2e.rs  dispatch_route.rs  dispatch_router_some.rs  dispatch_synthetic_route.rs  embedded_server.rs  events_route.rs  fallback_smoke.rs  finding_routes.rs  health_smoke.rs  ledger_route.rs  multi_provider_login.rs  persistent_session.rs  project_route.rs  secret_roundtrip.rs  version_smoke.rs
crates/studio-server/tests/common/: mod.rs
crates/studio-store/: Cargo.toml
crates/studio-store/src/: adr.rs  error.rs  finding.rs  ledger.rs  lib.rs  session.rs  watch.rs
crates/studio-store/tests/: adr_roundtrip.rs  cold_start_index_rebuild.rs  finding_roundtrip.rs  ledger_cold_start_import.rs  ledger_recent_ordering.rs  ledger_task_tag_roundtrip.rs  session_blob_kv.rs  watcher_smoke.rs
crates/studio-store/tests/common/: mod.rs
docs/agent/: README.md  conventions.md  roadmap-v0.4.x.md
docs/agent/adr/: 0001-stack-choice.md  0002-single-binary-deployment.md  0003-auth-endpoint-first.md  0004-storage-sqlite-filesystem.md  0005-runner-router-lift.md  0006-studio-router-api-and-lift-provenance.md  0007-secret-storage-aead-round-trip.md  0008-multi-provider-login.md  0009-persistent-session-across-restart.md  0010-dispatch-context-task-tag.md  0011-i18n-zh-en-toggle.md  0012-agent-loop-tool-calls.md  0013-tauri-desktop-runtime.md  README.md  _template.md
docs/agent/findings/: README.md  a1-1-strip-2-noop-at-pin-61f2aff.md  cto-shougate-test-gate-grep-leak.md  f20-closure-last-verified-commit-enforcement.md  m4-release-readiness-spa-fallback-extractor.md  m6-aead-seal-salt-mismatch.md
docs/agent/modules/: studio-router.md  studio-server.md  studio-store.md  web-frontend.md
docs/human/en/: README.md  secret-storage.md
docs/human/zh/: README.md  secret-storage.md
docs/outreach/: show-hn-draft-v1.md
scripts/: build-release.sh  doc-coverage.sh  release-readiness.sh  release-tarball.sh  smoke-dogfood.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
web/: .prettierignore  package.json  playwright-agent.config.ts  playwright-dogfood.config.ts  playwright-i18n.config.ts  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
web/src/: app.css  app.html  test-setup.ts
web/src/lib/: api.test.ts  api.ts  crypto.test.ts  crypto.ts  i18n.test.ts  i18n.ts  store.svelte.ts  types.test.ts  types.ts  util.ts
web/src/lib/components/: Badge.svelte  Button.svelte  Modal.svelte
web/src/lib/i18n/: en.ts  zh.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/adr/: +page.svelte
web/src/routes/agent/: +page.svelte
web/src/routes/finding/: +page.svelte
web/src/routes/ledger/: +page.svelte
web/src/routes/login/: +page.svelte
web/tests/e2e/: _fixtures.ts  _setup-dogfood.ts  _setup.ts  _teardown-dogfood.ts  _teardown.ts  adr.spec.ts  agent.spec.ts  dogfood.spec.ts  finding.spec.ts  i18n.spec.ts  ledger.spec.ts  login-aead.spec.ts  login.spec.ts
