[workspace]
resolver = "2"
members = [
    "crates/studio-server",
    "crates/studio-store",
    "crates/studio-router",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0 OR MIT"
authors = ["The Cobrust Studio Project"]
repository = "https://github.com/cobrust-lang/cobrust-studio"
homepage = "https://github.com/cobrust-lang/cobrust-studio"
readme = "README.md"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
todo = "warn"
dbg_macro = "warn"
doc_markdown = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }
futures = "0.3"
# A1.1 — added for studio-router lift from cobrust-llm-router @ 61f2aff (v0.1.1).
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
blake3 = "1.5"
hex = "0.4"
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "macros", "serde-well-known"] }
rand = "0.8"
tempfile = "3"
wiremock = "0.6"
# A2 — added for studio-store (ADR-0004 storage + ADR-0006 addendum ledger reader).
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
serde_yaml = "0.9"
tokio-stream = { version = "0.1", features = ["sync"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "debuginfo"
