[workspace]
resolver = "2"
members = [
    "crates/studio-server",
    "crates/studio-store",
    "crates/studio-router",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0 OR MIT"
authors = ["The Cobrust Studio Project"]
repository = "https://github.com/Cobrust-lang/cobrust-studio"
homepage = "https://github.com/Cobrust-lang/cobrust-studio"
readme = "README.md"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
todo = "warn"
dbg_macro = "warn"
doc_markdown = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time", "net", "signal"] }
futures = "0.3"
# A1.1 — added for studio-router lift from cobrust-llm-router @ 61f2aff (v0.1.1).
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
blake3 = "1.5"
hex = "0.4"
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "macros", "serde-well-known"] }
rand = "0.8"
tempfile = "3"
wiremock = "0.6"
# A2 — added for studio-store (ADR-0004 storage + ADR-0006 addendum ledger reader).
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
serde_yaml = "0.9"
tokio-stream = { version = "0.1", features = ["sync"] }
# A3 — added for studio-server (Axum HTTP layer + CLI).
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "macros", "query"] }
tower = "0.5"
tower-http = { version = "0.6", default-features = false, features = ["trace", "cors", "fs"] }
clap = { version = "4", features = ["derive", "env"] }
# A4 — added for studio-server (Wave A4 routes):
# base64 for EncryptedBlob wire transport on /api/auth/set-endpoint.
base64 = "0.22"
# M3 — added for studio-server single-binary embedding (ADR-0002).
# `mime-guess` feature pulls in `mime_guess` so handlers can resolve
# Content-Type from the embedded path without an extra workspace dep.
rust-embed = { version = "8", features = ["mime-guess"] }
# M6 — AEAD round-trip (ADR-0007). RustCrypto audited crates.
aes-gcm = { version = "0.10", features = ["aes"] }   # `aes` feature unlocks AES-NI on x86_64 + ARMv8 Crypto Extensions on aarch64 (Aleksandr v3 P2 #3)
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
# M8 — persistent session across binary restart (ADR-0009).
#
# Cross-platform OS keychain access:
# - macOS: `apple-native` → Security framework's `SecKeychain`.
# - Windows: `windows-native` → Credential Manager via DPAPI.
# - Linux: `sync-secret-service` + `crypto-rust` → freedesktop
#   `org.freedesktop.secrets` D-Bus interface (gnome-keyring / KWallet /
#   secret-service-tool). The `crypto-rust` backend is the pure-Rust
#   AES-GCM transport encryption for the D-Bus session (NOT for the
#   stored value; the stored value is the plaintext passphrase that
#   `keyring` opaquely passes to the secret-service daemon).
#
# `default-features = false` strips the async/tokio variants — M8 reads
# the keychain once at boot (sub-50ms; bocking is fine) and writes once
# per /api/login (already in an async handler that can `tokio::task::
# spawn_blocking` if needed; current impl blocks the thread for the
# ~ms-level write which is the same cost as a SQL UPDATE).
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
# Memory-hygiene for the passphrase string handed to `keyring` /
# `FileStore`. ADR-0007 §"Threat model" puts memory-dump out of scope,
# but the M8 surface adds a NEW code path that handles the raw
# passphrase string outside the brief login-handler scope; the
# Aleksandr v3 P2 §"Memory hygiene" mitigation applies. `Zeroizing<
# String>` wipes the underlying `Vec<u8>` heap allocation on drop so a
# subsequent allocation reuse cannot leak the old bytes.
zeroize = { version = "1.8", features = ["std", "zeroize_derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "debuginfo"
