[package]
name = "studio-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cobrust Studio LLM router — provider-agnostic dispatch, BLAKE3 cache, JSONL ledger. Forked from cobrust-llm-router @ 61f2aff per ADR-0005/0006."

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
blake3.workspace = true
futures.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
# Note: `hex`, `tracing`, `unicode-normalization`, `uuid` were lifted from
# upstream cobrust-llm-router's Cargo.toml but the post-strip code path
# does not use any of them (verified via grep `use $dep` / `$dep::` /
# macro forms across crates/studio-router/src/). ADR-0006 addendum F-05
# tagged them for Wave A2 polish; persona audit (Aleksandr) flagged them
# still present. Removed M5 (post-tag polish). Workspace.dependencies
# entries left in place — studio-store still uses tracing.

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "sync"] }
wiremock.workspace = true
