[package]
name = "studio-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "cobrust-studio"
path = "src/main.rs"

[lib]
name = "studio_server"
path = "src/lib.rs"

[dependencies]
studio-store = { path = "../studio-store" }
studio-router = { path = "../studio-router" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
futures.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
reqwest.workspace = true
axum.workspace = true
tower.workspace = true
http = "1"
http-body-util = "0.1"
