[package]
name = "studio-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "cobrust-studio"
path = "src/main.rs"

[lib]
name = "studio_server"
path = "src/lib.rs"

[dependencies]
studio-store = { path = "../studio-store" }
studio-router = { path = "../studio-router" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
futures.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
reqwest.workspace = true
axum.workspace = true
tower.workspace = true
http = "1"
http-body-util = "0.1"
# A4 TEST corpus: SSE body chunk reading + base64 round-trip in auth tests.
# `studio-router` / `studio-store` are inherited from `[dependencies]` and
# remain in scope for integration tests without a dev-dep re-listing.
futures.workspace = true
base64 = "0.22"
# A5 TEST corpus: in-test synthetic LlmProvider double impls `LlmProvider`
# via `#[async_trait::async_trait]`. `async-trait` is a workspace dep
# already used by `studio-router`; re-list here so the test file resolves
# the proc-macro without depending on the router crate's transitively-
# exposed copy (unstable across edition bumps).
async-trait.workspace = true
