[package]
name = "studio-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "cobrust-studio"
path = "src/main.rs"

[lib]
name = "studio_server"
path = "src/lib.rs"

[dependencies]
studio-store = { path = "../studio-store" }
studio-router = { path = "../studio-router" }
# A5: async-trait needed for `impl LlmProvider for SyntheticProvider`
# (the studio-router trait carries `#[async_trait::async_trait]`).
async-trait.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
futures.workspace = true
base64.workspace = true
# M3 — embed `web/build/` (SvelteKit static export) into the release binary
# per ADR-0002 single-binary deployment. The `mime-guess` feature pulls in
# `mime_guess` so the static-asset handler can resolve Content-Type from
# the embedded path without re-declaring `mime_guess` at the workspace.
rust-embed.workspace = true
# M6 — AEAD round-trip (ADR-0007). RustCrypto audited crates (workspace pins).
aes-gcm.workspace = true
argon2.workspace = true
rand_core.workspace = true
# M8 — persistent session across binary restart (ADR-0009).
keyring.workspace = true
zeroize.workspace = true
[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
reqwest.workspace = true
axum.workspace = true
tower.workspace = true
http = "1"
http-body-util = "0.1"
# A4 TEST corpus: SSE body chunk reading + base64 round-trip in auth tests.
# `studio-router` / `studio-store` are inherited from `[dependencies]` and
# remain in scope for integration tests without a dev-dep re-listing.
futures.workspace = true
base64 = "0.22"
# A5 TEST corpus: in-test synthetic LlmProvider double impls `LlmProvider`
# via `#[async_trait::async_trait]`. `async-trait` is a workspace dep
# already used by `studio-router`; re-list here so the test file resolves
# the proc-macro without depending on the router crate's transitively-
# exposed copy (unstable across edition bumps).
async-trait.workspace = true
# M6 TEST corpus: wiremock for Anthropic API stub in secret_roundtrip tests.
wiremock.workspace = true
