[package]
name = "studio-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cobrust Studio persistence layer — ADR/finding markdown CRUD, SQLite materialized views, encrypted session k/v. Per ADR-0004 and ADR-0006 addendum (F-02)."

# Crate-level lints intentionally diverge from `[workspace.lints]`: the
# integration test corpus under `tests/` (pinned by P7-TEST as the Wave-A2
# contract) trips a small set of pedantic / `unwrap_used` lints. Library
# code (`src/`) is still expected to satisfy the same bar as the workspace
# — production violations will surface at review time.
[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
todo = "warn"
dbg_macro = "warn"
doc_markdown = "allow"
module_name_repetitions = "allow"
# A2 reconcile: relaxed for the TEST corpus (test-only triggers; lib clean).
too_many_arguments = "allow"
case_sensitive_file_extension_comparisons = "allow"
collapsible_if = "allow"
redundant_closure_for_method_calls = "allow"
unwrap_used = "allow"
used_underscore_items = "allow"
used_underscore_binding = "allow"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
time.workspace = true
sqlx.workspace = true
notify.workspace = true
# Re-exports LedgerEntry/Outcome/ProviderKind per ADR-0006 addendum F-02
# (studio-store is a reader of the JSONL written by studio-router::Ledger).
studio-router = { path = "../studio-router" }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "sync"] }
